bugfix: cannot access other paths when root path ("/") cannot be accessed